--- a/saate.html
+++ b/saate.html
@@ -2,6 +2,16 @@
 <html>
   <head>
     <base target="_top">
+    <style>
+      * {
+        font-family: serif;
+        font-size: 1em;
+      }
+      
+      body {
+        margin-left: 5em;
+      }
+    </style>
   </head>
   <body>
   <p>Tervehdys.</p>
