--- a/saate.html
+++ b/saate.html
@@ -5,11 +5,12 @@
     <style>
       * {
         font-family: serif;
-        font-size: 1em;
+        font-size: 1.5em;
       }
-      
+
       body {
-        margin-left: 5em;
+        margin-left: auto;
+        width: 50%;
       }
     </style>
   </head>
