--- a/saate.html
+++ b/saate.html
@@ -5,11 +5,11 @@
     <style>
       * {
         font-family: serif;
-        font-size: 1.5em;
+        font-size: 1em;
       }
 
       body {
-        margin-left: auto;
+        margin: auto;
         width: 50%;
       }
     </style>
@@ -17,20 +17,36 @@
   <body>
   <p>Tervehdys.</p>
 
-<p>Suku on laaja verkosto, joka leviää sukupolvia taaksepäin vanhempien ja esivanhempien kautta, sivuille päin puolisoiden ja sisarusten kautta ja jälleen sukupolvia alaspäin lasten ja lastenlasten kautta. Tämän tästä tulee tarvetta selvittää jokin läheisempiin tai etäisempiin sukulaisiin liittyvä tieto:</p>
+<p>Suku on laaja verkosto, joka leviää sukupolvia taaksepäin vanhempien ja esivanhempien kautta, sivuille päin puolisoiden ja sisarusten kautta ja jälleen sukupolvia eteenpäin lasten ja lastenlasten kautta. Viimekädessä olemme kaikki tavalla tai toisella sukua toisillemme.</p>
 
-<p>“Kuinka monta lasta olikaan Karoliina-mummulla? Minä vuonna Artturi-eno kuoli? Mikä oli serkun tyttären syntymäaika? Milloin Matti ja Liisa on vihitty?”</p>
+<p>Tämän tästä tuleekin tarve selvittää jokin läheisempiin tai etäisempiin sukulaisiin liittyvä tieto:</p>
+
+<ul>
+  <li>Kuinka monta lasta olikaan Karoliina-mummulla?</li> 
+  <li>Minä vuonna Artturi-eno kuoli?</li>
+  <li>Mikä oli Amanda-serkun tyttären syntymäaika?</li>
+  <li>Milloin Matti ja Liisa on vihitty?</li>
+</ul>
 
 <p>Nämä tiedot saattavat löytyä hyllyssä olevasta sukuseuran sukukirjasta tai perheraamatusta tai erinäisistä dokumenteista, joita vuosien varrella on selvitelty ja keräilty. Näihin tosin liittyy muutamia pulmia:</p>
 
 <ul>
-<li>tietoa pitää etsiskellä useista tietolähteistä, jos tieto ylipäätään edes löytyy omista dokumenteista</li>
-<li>sukukirjat kertovat vain historiaa tietystä ajan hetkestä taaksepäin, mutta eivät tapahtumista sen jälkeen</li>
-<li>satunnaisin lyijukynämerkinnöin on tehty päivityksiä ja korjauksia (kun se Taavi-vaarin syntymäaikakin on kirjassa väärin)</li>
-<li>henkilölistat ovat lineaarisia ja sukupuita ja sukulaisuussuhteita on hankala hahmottaa</li>
+  <li>tietoa pitää etsiskellä useista tietolähteistä, jos tieto ylipäätään edes löytyy omista dokumenteista</li>
+  <li>sukukirjat kertovat vain historiaa tietystä ajan hetkestä taaksepäin, mutta eivät tapahtumista sen jälkeen</li>
+  <li>satunnaisin lyijykynämerkinnöin on tehty päivityksiä ja korjauksia (kun se Taavi-vaarin syntymäaikakin on kirjassa väärin)</li>
+  <li>henkilölistat ovat lineaarisia ja sukupuita tai sukulaisuussuhteita on hankala hahmottaa</li>
 </ul>
 
-<p>Siksipä päätin tehdä paikan, josta tuo kaikki tieto voisi löytyä, jossa olisi helppo navigoida ja jota voisi tarpeen mukaan päivittää ja laajentaa.<p> 
+<p>Siksipä päätin tehdä paikan, josta tuo kaikki tieto voisi löytyä, jossa olisi helppo navigoida ja katsella sukupuita ja jota voisi tarpeen mukaan päivittää ja laajentaa. Olen tallettanut tietoja omasta ja Mirjan lähisuvusta ja käyttänyt tässä sitä materiaalia, jota itselläni on ollut:<p>
+
+<ul>
+  <li>Sukukirja "Heikkilä-Berggrenin suku / Kallen sukuhaara"</li>
+  <li>Sukukirja "Manamasalon Mannilan Karppisten sukukirja"</li>
+  <li>Isäni Hirvo Salosen tekemiä sukuselvityksiä omasta ja äitini puolen suvuista</li>
+  <li>Ja niitä perheraamattuja</li>
+</ul>
+
+Monia nimiä ja päivämääriä varmasti puuttuu, varsinkin uudempien tapahtumien ja henkilöiden osalta. Niinpä päätin tukeutua teihin, omat ja Mirjan sukulaiset. Pääsette viestin lopussa olevasta linkistä sovellukseen ja sitä kautta täydentämään itsellenne merkityksellistä puuttuvaa tietoa ja korjaamaan mahdollisia virheitä.
 
   </body>
 </html>
