--- a/saate.html
+++ b/saate.html
@@ -5,7 +5,7 @@
     <style>
       * {
         font-family: serif;
-        font-size: 15px;
+        font-size: 20px;
       }
 
       body {
@@ -50,6 +50,9 @@
     </ul>
 
     <p>Monia nimiä ja päivämääriä varmasti puuttuu, varsinkin uudempien tapahtumien ja henkilöiden osalta. Niinpä päätin tukeutua teihin, omat ja Mirjan sukulaiset. Pääsette viestin lopussa olevasta linkistä sovellukseen ja sitä kautta täydentämään itsellenne merkityksellistä puuttuvaa tietoa ja korjaamaan mahdollisia virheitä.<p>
+
+    <p>Terveisin,</br>
+    Pekka ja Mirja</p>
 
 
     <a href="https://pekkas-github.github.io/sukujenkirja">Sukujen kirja</a>
