--- a/saate.html
+++ b/saate.html
@@ -20,9 +20,9 @@
   
     <p>Tervehdys.</p>
 
-    <p>Ihmissuku on suunnaton verkosto, joka laajenee vanhempien sukupolvien kautta taaksepäin, puolisoiden ja sisarusten kautta sivuille päin ja lasten kautta ajassa eteenpäin. Viimekädessä olemme kaikki tavalla tai toisella sukua toisillemme.</p>
+    <p>Ihmissuku on suunnaton verkosto, joka laajenee vanhempien kautta sukupolvia taaksepäin, puolisoiden ja sisarusten kautta sivuille päin ja lasten kautta ajassa eteenpäin. Viimekädessä olemme kaikki tavalla tai toisella sukua toisillemme.</p>
 
-    <p>Tämän tästä tuleekin tarve selvittää jokin läheisempiin tai etäisempiin sukulaisiin liittyvä tieto:</p>
+    <p>Tämän tästä tuleekin tarve selvittää jokin läheisempiin tai etäisempiin sukulaisiin liittyvä, mieltä askarruttava tieto:</p>
 
     <ul>
       <li>Kuinka monta lasta olikaan Karoliina-mummulla?</li> 
@@ -37,10 +37,10 @@
       <li>tietoa pitää etsiskellä useista tietolähteistä, jos tieto ylipäätään edes löytyy omista dokumenteista</li>
       <li>sukukirjat kertovat vain historiaa tietystä ajan hetkestä taaksepäin, mutta eivät tapahtumista sen jälkeen</li>
       <li>satunnaisin lyijykynämerkinnöin on tehty päivityksiä ja korjauksia (kun se Taavi-vaarin syntymäaikakin on kirjassa väärin)</li>
-      <li>henkilölistat ovat lineaarisia ja sukupuita tai sukulaisuussuhteita on hankala hahmottaa</li>
+      <li>henkilöluettelot ovat lineaarisia ja sukupuita tai sukulaisuussuhteita on hankala hahmottaa</li>
     </ul>
 
-    <p>Siksipä päätin tehdä paikan, josta tuo kaikki tieto voisi löytyä, jossa olisi helppo navigoida ja katsella sukupuita ja jota voisi tarpeen mukaan päivittää ja laajentaa, niin tietojen kuin ominaisuuksienkin osalta. Olen tallettanut sinne tietoja omasta ja Mirjan lähisuvusta ja käyttänyt tässä sitä materiaalia, jota itselläni on ollut saatavilla:<p>
+    <p>Siksipä päätin tehdä paikan, josta tuo kaikki tieto voisi löytyä, jossa olisi helppo navigoida ja katsella sukupuita ja jota voisi tarpeen mukaan päivittää ja laajentaa. Olen tehnyt pienen sovelluksen ja tallettanut sinne tietoja omasta sekä Mirjan lähisuvusta ja käyttänyt sitä materiaalia, jota itselläni on ollut saatavilla:<p>
 
     <ul>
       <li>Sukukirja "Heikkilä-Berggrenin suku / Kallen sukuhaara"</li>
@@ -54,7 +54,8 @@
     <p>Terveisin,</br>
     Pekka ja Mirja</p>
 
+    <a href="https://pekkas-github.github.io/sukujenkirja">https://pekkas-github.github.io/sukujenkirja</a>
 
-    <a href="https://pekkas-github.github.io/sukujenkirja">Sukujen kirja</a>
+    <p>(Ensimmäisen kerran laitteelta kirjautuessasi kysytään nimeäsi lokitietojen keräämiseksi.)</p>
   </body>
 </html>
