--- a/ohje.html
+++ b/ohje.html
@@ -2,36 +2,49 @@
 <html>
   <head>
     <base target="_top">
+
+    <style>
+      * {
+        font-family: serif;
+        font-size: 20px;
+      }
+
+      body {
+        margin: auto;
+        width: 50%;
+      }
+    </style>
+
   </head>
   <body>
 
     <h2 style="text-align: center;">Sukujen kirja - ohje</h2>
 
-<h3>Haku</h3>
+    <h3>Haku</h3>
 
-<p>Henkilöitä voidaan hakea kahdella tavalla:</p>
+    <p>Henkilöitä voidaan hakea kahdella tavalla:</p>
 
-<ul>
-  <li>Valintalista näyttää kaikki henkilöt aakkosjärjestyksessä. Listaa voi selata ja sitten valita etsimänsä henkilön. Myös näppäimen painallus siirtää valinnan suoraan kyseisen alkukirjaimen kohdalle. Seuraava painallus siirtää valintaa saman alkukirjaimen puitteissa eteenpäin. Valinnan voi vahvistaa klikkaamalla tai enterin painalluksella.</li>
-  <li>Tekstihaku hakee dynaamisesti kaikki henkilöt, joiden nimestä löytyy annettu merkkijono. Haku käynnistyy vasta kolmannesta merkistä. Jos haussa on useita osia välilyönnillä erotettuina, Haetaan henkilöt, joiden nimistä kaikki osat löytyvät. </li>
-</ul>
+    <ul>
+      <li>Valintalista näyttää kaikki henkilöt aakkosjärjestyksessä. Listaa voi selata ja sitten valita etsimänsä henkilön. Myös näppäimen painallus siirtää valinnan suoraan kyseisen alkukirjaimen kohdalle. Seuraava painallus siirtää valintaa saman alkukirjaimen puitteissa eteenpäin. Valinnan voi vahvistaa klikkaamalla tai enterin painalluksella.</li>
+      <li>Tekstihaku hakee dynaamisesti kaikki henkilöt, joiden nimestä löytyy annettu merkkijono. Haku käynnistyy vasta kolmannesta merkistä. Jos haussa on useita osia välilyönnillä erotettuina, Haetaan henkilöt, joiden nimistä kaikki osat löytyvät. </li>
+    </ul>
 
-<h3>Henkilölinkit</h3>
+    <h3>Henkilölinkit</h3>
 
-<p>Kaikissa näkymissä olevat henkilöiden nimet ovat linkkejä, joita klikkaamalla pääsee kyseisen henkilön tietoihin.</p>
+    <p>Kaikissa näkymissä olevat henkilöiden nimet ovat linkkejä, joita klikkaamalla pääsee kyseisen henkilön tietoihin.</p>
 
-<h3>Lapsisuhteen määrittely</h3>
+    <h3>Lapsisuhteen määrittely</h3>
 
-<p>Kunkin henkilön osalta määritellään suhteet isään, äitiin ja puolisoon (puolisoihin). Lapsia ei erikseen määritellä, vaan lapsisuhde syntyy isän ja äidin määrittelyn kautta.</p>
-<p>Ennen kuin mitään suhdetta voidaan ylipäätään määritellä, pitää kohdehenkilön olla olemassa. </p>
+    <p>Kunkin henkilön osalta määritellään suhteet isään, äitiin ja puolisoon (puolisoihin). Lapsia ei erikseen määritellä, vaan lapsisuhde syntyy isän ja äidin määrittelyn kautta.</p>
+    <p>Ennen kuin mitään suhdetta voidaan ylipäätään määritellä, pitää kohdehenkilön olla olemassa. </p>
 
-<h3>Päivämäärien muoto</h3>
+    <h3>Päivämäärien muoto</h3>
 
-<p>Päiväyksissä käytetään muotoa VVVV-KK-PP. Tällä muodolla henkilöt on helppo asettaa näkymissä aikajärjestykseen. Päiväyksen ei tarvitse olla täydellinen - esim. pelkkä VVVV riittää, jos tarkempaa ajankohtaa ei ole tiedossa. Päiväyksen perään voi lisätä myös esim. kysymysmerkin, jos on tiedosta epävarma.</p>
+    <p>Päiväyksissä käytetään muotoa VVVV-KK-PP. Tällä muodolla henkilöt on helppo asettaa näkymissä aikajärjestykseen. Päiväyksen ei tarvitse olla täydellinen - esim. pelkkä VVVV riittää, jos tarkempaa ajankohtaa ei ole tiedossa. Päiväyksen perään voi lisätä myös esim. kysymysmerkin, jos on tiedosta epävarma.</p>
 
-<h3>Tietojen talletus</h3>
+    <h3>Tietojen talletus</h3>
 
-<p>Tietojen talletus saattaa kestää useita sekunteja. Talletuksen ajan ruudulla pyörii “spinner”, joka blokkaa kaikki muut toimenpiteet. Jos kyseessä on vain olemassa olevien tietojen päivitys, ei talletuksen ajaksi ole tarvetta pysähtyä odottamaan.</p>
+    <p>Tietojen talletus saattaa kestää useita sekunteja. Talletuksen ajan ruudulla pyörii “spinner”, joka blokkaa kaikki muut toimenpiteet. Jos kyseessä on vain olemassa olevien tietojen päivitys, ei talletuksen ajaksi ole tarvetta pysähtyä odottamaan.</p>
 
   </body>
 </html>
