--- a/ohje.html
+++ b/ohje.html
@@ -44,7 +44,7 @@
 
     <h3>Tietojen talletus</h3>
 
-    <p>Tietojen talletus saattaa kestää useita sekunteja. Talletuksen ajan ruudulla pyörii “spinner”, joka blokkaa kaikki muut toimenpiteet. Jos kyseessä on vain olemassa olevien tietojen päivitys, ei talletuksen ajaksi ole tarvetta pysähtyä odottamaan.</p>
+    <p>Tietojen talletus saattaa kestää useita sekunteja. Talletuksen ajan ruudulla pyörii “spinner”, joka blokkaa kaikki muut toimenpiteet.</p>
 
   </body>
 </html>
