--- a/saate.html
+++ b/saate.html
@@ -49,7 +49,7 @@
       <li>Ja niitä perheraamattuja</li>
     </ul>
 
-    <p>Monia nimiä ja päivämääriä varmasti puuttuu, varsinkin uudempien tapahtumien ja henkilöiden osalta. Niinpä ajattelin tukeutua teihin, omat ja Mirjan sukulaiset. Pääsette alla olevasta linkistä sovellukseen ja sitä kautta katselemaan ja täydentämään itsellenne merkityksellisiä tietoa sekä korjaamaan mahdollisia virheitä. Näyttöjä ei ole optimoitu mobiililaitteille, joten parhaiten käyttö onnistuu tietokoneella.<p>
+    <p>Monia nimiä ja päivämääriä varmasti puuttuu, varsinkin uudempien tapahtumien ja henkilöiden osalta. Niinpä ajattelin tukeutua teihin, omat ja Mirjan sukulaiset. Pääsette alla olevasta linkistä sovellukseen ja sitä kautta katselemaan ja täydentämään itsellenne merkityksellisiä tietoja sekä korjaamaan mahdollisia virheitä. Näyttöjä ei ole optimoitu mobiililaitteille, joten parhaiten käyttö onnistuu tietokoneella.<p>
 
     <p>Terveisin,</br>
     Pekka ja Mirja</p>
