Korjattu GET-parametrin nimi

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         
       function openApplicationFrame (username) {
         const content = `
-            <iframe src="https://script.google.com/macros/s/AKfycbxj09gScl21GDwUHSd68oszqOBQBi5QN3yxaMtjf_sjaTSys_h20DZD77YDUhRCjZA/exec?profile=guest&username=${username}">
+            <iframe src="https://script.google.com/macros/s/AKfycbxj09gScl21GDwUHSd68oszqOBQBi5QN3yxaMtjf_sjaTSys_h20DZD77YDUhRCjZA/exec?usertype=guest&username=${username}">
             scrolling="auto">
             </iframe>`
 
