--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <html>
 
   <head>
+    <title>Sukujen kirja</title>
+    <link rel="icon" type="image/x-icon" href="https://images.icon-icons.com/3251/PNG/512/organization_regular_icon_202821.png">
+
     <style>
         
     body {
