--- a/ohje.html
+++ b/ohje.html
@@ -3,6 +3,8 @@
   <head>
     <base target="_top">
 
+    <title>Ohje - Sukujen kirja</titel>
+
     <style>
       * {
         font-family: serif;
