Korjaus title-elementtiin sekä lisää tekstiä

--- a/ohje.html
+++ b/ohje.html
@@ -3,7 +3,7 @@
   <head>
     <base target="_top">
 
-    <title>Ohje - Sukujen kirja</titel>
+    <title>Ohje - Sukujen kirja</title>
 
     <style>
       * {
@@ -47,6 +47,15 @@
     <h3>Tietojen talletus</h3>
 
     <p>Tietojen talletus saattaa kestää useita sekunteja. Talletuksen ajan ruudulla pyörii “spinner”, joka blokkaa kaikki muut toimenpiteet.</p>
+
+    <h3>Sukupuut</h3>
+    <p>Henkilön sukupuun yleneviin tai aleneviin polviin saa näkyviin puumaisena rakenteena. Näkymää voi laajentaa tai supistaa halutulla tavalla. Henkilön edessä oleva merkki painettaessa</p>
+    <ul>
+      <li>(+) näkymä laajenee</li>
+      <li>(-) näkymä supistuu</li>
+      <li>(.) näkymä ei laajene</li>
+    </ul>
+    <p>Kontrollipalkista koko näkymän voi laajentaa kerralla tai supistaa kokonaan</p>
 
   </body>
 </html>
