--- a/ohje.html
+++ b/ohje.html
@@ -49,13 +49,13 @@
     <p>Tietojen talletus saattaa kestää useita sekunteja. Talletuksen ajan ruudulla pyörii “spinner”, joka blokkaa kaikki muut toimenpiteet.</p>
 
     <h3>Sukupuut</h3>
-    <p>Henkilön sukupuun yleneviin tai aleneviin polviin saa näkyviin puumaisena rakenteena. Näkymää voi laajentaa tai supistaa halutulla tavalla. Henkilön edessä oleva merkki painettaessa</p>
+    <p>Henkilön sukupuun saa näkyviin puumaisena rakenteena yleneviin tai aleneviin polviin. Näkymää voi laajentaa tai supistaa halutulla tavalla. Henkilön edessä olevaa merkkiä painettaessa</p>
     <ul>
       <li>(+) näkymä laajenee</li>
       <li>(-) näkymä supistuu</li>
       <li>(.) näkymä ei laajene</li>
     </ul>
-    <p>Kontrollipalkista koko näkymän voi laajentaa kerralla tai supistaa kokonaan</p>
+    <p>Kontrollipalkista koko näkymän voi laajentaa kerralla tai supistaa kokonaan.</p>
 
   </body>
 </html>
