Lisätty kielivalinta aloitukseen

--- a/ohje.html
+++ b/ohje.html
@@ -20,7 +20,7 @@
   </head>
   <body>
 
-    <h2 style="text-align: center;">Sukujen kirja - ohje</h2>
+    <h2 style="text-align: center;">Sukujen kirja - ohje (currently only in Finnish)</h2>
 
     <h3>Haku</h3>
 
